--- a/app/src/main/res/drawable/gradiente_spinner.xml
+++ b/app/src/main/res/drawable/gradiente_spinner.xml
@@ -2,11 +2,11 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:top="10dp" android:bottom="10dp" android:left="8dp" android:right="8dp">
         <shape>
-            <solid android:color="@android:color/white" />
+            <solid android:color="@android:color/transparent" />
             <corners android:radius="2dp"/>
             <stroke
                 android:width="1dp"
-                android:color="#EBEBEB" />
+                android:color="@color/colorPrimary" />
             <padding
                 android:top="3dp"
                 android:bottom="3dp"
