--- a/app/src/main/res/drawable/shapebutton.xml
+++ b/app/src/main/res/drawable/shapebutton.xml
@@ -3,7 +3,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true">
         <shape>
-            <solid android:color="@android:color/holo_green_light" />
+            <solid android:color="@color/colorPrimaryDark" />
         </shape>
     </item>
 
@@ -15,7 +15,7 @@
 
     <item>
         <shape>
-            <solid android:color="@android:color/holo_green_dark" />
+            <solid android:color="@color/colorPrimaryDark" />
         </shape>
     </item>
 </selector>
