--- a/app/src/main/res/drawable/shapebuttonborder.xml
+++ b/app/src/main/res/drawable/shapebuttonborder.xml
@@ -4,16 +4,16 @@
     <item android:state_pressed="true">
         <shape>
             <stroke
-                android:color="@android:color/darker_gray"
+                android:color="@color/colorPrimary"
                 android:width="1dp" />
-            <solid android:color="@color/colorPrimaryLight" />
+            <solid android:color="@color/colorPrimaryDark" />
         </shape>
     </item>
 
     <item android:state_pressed="false" android:state_selected="true">
         <shape>
             <stroke
-                android:color="@android:color/darker_gray"
+                android:color="@color/colorPrimary"
                 android:width="1dp" />
             <solid android:color="@color/colorPrimaryDark" />
         </shape>
@@ -22,7 +22,7 @@
     <item>
         <shape>
             <stroke
-                android:color="@android:color/darker_gray"
+                android:color="@color/colorPrimary"
                 android:width="1dp" />
             <solid android:color="@android:color/transparent" />
         </shape>
