--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="projetaobcc20172.com.projetopetemfoco.activity.MainActivity">
+    android:background="@drawable/fundo_degrade"
+    tools:context="projetaobcc20172.com.projetopetemfoco.activity.LoginActivity">
 
     <include
         android:id="@+id/tb_main"
@@ -11,35 +12,99 @@
 
     </include>
 
-    <ListView
-        android:id="@+id/lv_pets"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="8dp"
-        android:layout_below="@+id/tb_main"
-        android:layout_above="@+id/ll_main">
-
-    </ListView>
-
     <LinearLayout
-        android:id="@+id/ll_main"
+        android:orientation="vertical"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:background="@android:color/white"
-        android:layout_alignParentBottom="true">
+        android:layout_height="match_parent">
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginBottom="2dp"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:id="@+id/tvTituloConsumidor"
+            android:layout_margin="6dp"
+            android:gravity="center"
+            android:textStyle="bold" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginBottom="2dp"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:id="@+id/tvSubtituloConsumidor"
+            android:layout_margin="6dp"
+            android:gravity="center"
+            android:textStyle="bold"/>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginBottom="2dp"/>
 
         <Button
-            android:id="@+id/botao_cadastrar_pet"
-            android:layout_width="wrap_content"
+            android:id="@+id/botao_meus_pets"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/botao_cadastrar_pet"
-            android:visibility="visible" />
+            android:layout_margin="4dp"
+            android:background="@drawable/shapebutton"
+            android:text="@string/botao_meus_pets" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginBottom="2dp" />
+
+        <Button
+            android:id="@+id/botao_buscar_servicos"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+            android:background="@drawable/shapebuttonborder"
+            android:text="@string/botao_buscar_servicos" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginBottom="2dp" />
+
+        <Button
+            android:id="@+id/botao_meus_favoritos"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+            android:background="@drawable/shapebuttonborder"
+            android:text="@string/botao_meus_favoritos" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginBottom="2dp" />
 
         <Button
             android:id="@+id/botao_sair"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+            android:background="@drawable/shapebuttonborder"
             android:text="@string/sair" />
 
     </LinearLayout>
