--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#795548</color>
+    <color name="colorPrimary">#B8860B</color>
     <color name="colorPrimaryLight">#a98274</color>
-    <color name="colorPrimaryDark">#4b2c20</color>
+    <color name="colorPrimaryDark">#B8860B</color>
     <color name="colorSecondary">#e65100</color>
     <color name="colorSecondaryLight">#ff833a</color>
     <color name="colorSecondaryDark">#ac1900</color>
