Alterado a nomenclatura de alguns componentes como sugerido pelo revisor.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,7 +58,7 @@
             android:layout_marginBottom="2dp"/>
 
         <Button
-            android:id="@+id/botao_meus_pets"
+            android:id="@+id/btnMeusPets"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
@@ -72,7 +72,7 @@
             android:layout_marginBottom="2dp" />
 
         <Button
-            android:id="@+id/botao_buscar_servicos"
+            android:id="@+id/btnBuscarServicos"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
@@ -86,7 +86,7 @@
             android:layout_marginBottom="2dp" />
 
         <Button
-            android:id="@+id/botao_meus_favoritos"
+            android:id="@+id/btnMeusFavoritos"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
@@ -100,7 +100,7 @@
             android:layout_marginBottom="2dp" />
 
         <Button
-            android:id="@+id/botao_sair"
+            android:id="@+id/btnSair"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
