--- a/app/src/main/res/layout/activity_pets.xml
+++ b/app/src/main/res/layout/activity_pets.xml
@@ -33,7 +33,7 @@
         android:padding="10dp">
 
         <ImageButton
-            android:id="@+id/botao_cadastrar_pet"
+            android:id="@+id/btnCadastrarPet"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:background="@drawable/ic_action_add"
