--- a/app/src/main/res/layout/lista_itens.xml
+++ b/app/src/main/res/layout/lista_itens.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical">
 
     <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/tv_titulo"
+        android:id="@+id/tvTitulo"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:textColor="@android:color/black"
@@ -15,7 +15,7 @@
         android:paddingRight="8dp" />
 
         <ImageButton
-            android:id="@+id/icone_remover_pet"
+            android:id="@+id/ibtnRemoverPet"
             android:layout_width="32dp"
             android:layout_height="32dp"
             android:layout_alignParentRight="true"
@@ -25,7 +25,7 @@
             android:gravity="center"/>
 
         <ImageButton
-            android:id="@+id/icone_editar_pet"
+            android:id="@+id/ibtnEditarPet"
             android:layout_width="32dp"
             android:layout_height="32dp"
             android:layout_alignParentRight="true"
@@ -35,10 +35,10 @@
             android:gravity="center"/>
 
     <TextView
-        android:id="@+id/tv_subtitulo"
+        android:id="@+id/tvSubtitulo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_titulo"
+        android:layout_below="@+id/tvTitulo"
         android:textColor="@android:color/black"
         android:textSize="14sp"
         android:paddingLeft="8dp"
