--- a/app/src/main/res/layout/activity_busca_estabelecimento.xml
+++ b/app/src/main/res/layout/activity_busca_estabelecimento.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
+    android:iconifiedByDefault >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -9,9 +10,12 @@
 
         <SearchView
             android:id="@+id/svBusca"
-            android:hint="@string/buscaEstabelecimento"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            android:queryHint="@string/buscaEstabelecimento"
+            android:iconifiedByDefault="false"
+            android:focusable="true"
+            android:focusableInTouchMode="true">
 
         </SearchView>
 
