--- a/app/src/main/res/layout/activity_editar_endereco.xml
+++ b/app/src/main/res/layout/activity_editar_endereco.xml
@@ -9,10 +9,10 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@drawable/fundo_degrade"
-    tools:context="projetaobcc20172.com.projetopetemfoco.activity.CadastroEnderecoActivity">
+    tools:context="projetaobcc20172.com.projetopetemfoco.activity.EditarEnderecoActivity">
 
     <include
-        android:id="@+id/tb_endereco"
+        android:id="@+id/tb_editar_endereco"
         layout="@layout/toolbar">
     </include>
 
@@ -20,14 +20,14 @@
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tb_endereco"
+        android:layout_below="@+id/tb_editar_endereco"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin">
 
         <ScrollView
-            android:id="@+id/scrollView"
+            android:id="@+id/scrollViewEditarEndereco"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -43,7 +43,7 @@
                     android:layout_marginTop="2dp" />
 
                 <TextView
-                    android:id="@+id/tvCadastroCepEndereco"
+                    android:id="@+id/tvEditarCepEndereco"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="6dp"
@@ -52,7 +52,7 @@
                     android:textStyle="bold" />
 
                 <EditText
-                    android:id="@+id/etCadastroCepEndereco"
+                    android:id="@+id/etEditarCepEndereco"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/digite_seu_cep"
@@ -60,7 +60,7 @@
                     android:maxLength="9" />
 
                 <TextView
-                    android:id="@+id/tvCadastroLogradouroEndereco"
+                    android:id="@+id/tvEditarLogradouroEndereco"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="6dp"
@@ -69,7 +69,7 @@
                     android:textStyle="bold" />
 
                 <EditText
-                    android:id="@+id/etCadastroLogradouroEndereco"
+                    android:id="@+id/etEditarLogradouroEndereco"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="4dp"
@@ -85,7 +85,7 @@
                     android:layout_marginTop="2dp" />
 
                 <TextView
-                    android:id="@+id/tvCadastroNumeroEndereco"
+                    android:id="@+id/tvEditarNumeroEndereco"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="6dp"
@@ -94,7 +94,7 @@
                     android:textStyle="bold" />
 
                 <EditText
-                    android:id="@+id/etCadastroNumeroEndereco"
+                    android:id="@+id/etEditarNumeroEndereco"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="4dp"
@@ -111,7 +111,7 @@
                     android:layout_marginTop="2dp" />
 
                 <TextView
-                    android:id="@+id/tvCadastroComplementoEndereco"
+                    android:id="@+id/tvEditarComplementoEndereco"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="6dp"
@@ -120,7 +120,7 @@
                     android:textStyle="bold" />
 
                 <EditText
-                    android:id="@+id/etCadastroComplementoEndereco"
+                    android:id="@+id/etEditarComplementoEndereco"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="4dp"
@@ -136,7 +136,7 @@
                     android:layout_marginTop="2dp" />
 
                 <TextView
-                    android:id="@+id/tvCadastroBairroEndereco"
+                    android:id="@+id/tvEditarBairroEndereco"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="6dp"
@@ -145,7 +145,7 @@
                     android:textStyle="bold" />
 
                 <EditText
-                    android:id="@+id/etCadastroBairroEndereco"
+                    android:id="@+id/etEditarBairroEndereco"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="4dp"
@@ -172,7 +172,7 @@
                     android:layout_width="match_parent">
 
                     <TextView
-                        android:id="@+id/tvCadastroLocalidadeEndereco"
+                        android:id="@+id/tvEditarLocalidadeEndereco"
                         android:layout_width="180dp"
                         android:layout_height="wrap_content"
                         android:layout_margin="6dp"
@@ -181,7 +181,7 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/tvCadastroUfEndereco"
+                        android:id="@+id/tvEditarUfEndereco"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_margin="6dp"
@@ -202,7 +202,7 @@
                         android:layout_width="180dp">
 
                         <EditText
-                            android:id="@+id/etCadastroLocalidadeEndereco"
+                            android:id="@+id/etEditarLocalidadeEndereco"
                             android:layout_width="300dp"
                             android:layout_height="wrap_content"
                             android:layout_margin="4dp"
@@ -220,7 +220,7 @@
                         android:orientation="horizontal">
 
                         <Spinner
-                            android:id="@+id/ufSpinner"
+                            android:id="@+id/ufEditarSpinner"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             style="@style/Widget.AppCompat.DropDownItem.Spinner"/>
@@ -230,12 +230,12 @@
                 </LinearLayout>
 
                 <Button
-                    android:id="@+id/botao_finalizar_cadastro_endereco"
+                    android:id="@+id/botao_editar_endereco"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:background="@drawable/shapebutton"
-                    android:text="@string/cadastrar"
+                    android:text="@string/editar"
                     android:visibility="visible" />
 
             </LinearLayout>
