--- a/app/src/main/res/layout/lista_itens.xml
+++ b/app/src/main/res/layout/lista_itens.xml
@@ -15,7 +15,7 @@
         android:paddingRight="8dp" />
 
         <ImageButton
-            android:id="@+id/ibtnRemoverPet"
+            android:id="@+id/ibtnRemover"
             android:layout_width="32dp"
             android:layout_height="32dp"
             android:layout_alignParentRight="true"
@@ -25,7 +25,7 @@
             android:gravity="center"/>
 
         <ImageButton
-            android:id="@+id/ibtnEditarPet"
+            android:id="@+id/ibtnEditar"
             android:layout_width="32dp"
             android:layout_height="32dp"
             android:layout_alignParentRight="true"
