--- a/app/src/main/res/layout/activity_lista_servicos.xml
+++ b/app/src/main/res/layout/activity_lista_servicos.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent" android:layout_height="match_parent">
+    <include
+        android:id="@+id/tbBuscaServicos"
+        layout="@layout/toolbar">
+    </include>
 
-    <GridView
-        android:id="@+id/gridOpPet"
+    <ListView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-    </GridView>
+        android:layout_height="match_parent" />
 </RelativeLayout>
