Tela de busca servico com icones.

--- a/app/src/main/res/layout/tab_servico_fragment.xml
+++ b/app/src/main/res/layout/tab_servico_fragment.xml
@@ -4,6 +4,12 @@
 
     <GridView
         android:id="@+id/gridServicos"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:numColumns="auto_fit"
+        android:gravity="center"
+        android:columnWidth="100dp"
+        android:stretchMode="columnWidth"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+    </GridView>
+
 </RelativeLayout>
