--- a/app/src/main/res/layout/grid_op_pets.xml
+++ b/app/src/main/res/layout/grid_op_pets.xml
@@ -3,20 +3,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:padding="5dp" >
+    android:orientation="vertical"
+    android:padding="5dp">
 
     <ImageView
         android:id="@+id/gridImgPet"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         app:srcCompat="@drawable/common_google_signin_btn_icon_dark_normal" />
 
     <TextView
         android:id="@+id/gridTextPet"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:textSize="9sp"></TextView>
+        android:layout_marginLeft="17dp"
+        android:layout_marginTop="-5dp"
+        android:text="servico"
+        android:textColor="@color/colorSecondaryText"
+        android:textSize="12sp" />
 
 </LinearLayout>
