--- a/app/src/main/res/layout/tab_opcoes_pet_fragment.xml
+++ b/app/src/main/res/layout/tab_opcoes_pet_fragment.xml
@@ -5,8 +5,11 @@
 
     <GridView
         android:id="@+id/gridOpPet"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
+        android:numColumns="auto_fit"
+        android:gravity="center"
+        android:columnWidth="100dp"
+        android:stretchMode="columnWidth"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
     </GridView>
 </RelativeLayout>
