--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -76,7 +76,8 @@
         <item>Vacinação</item>
     </string-array>
 
-    <string-array name="tiposAnimais">
+    <string-array name="tiposPetBusca">
+        <item>Todos</item>
         <item>Cachorro</item>
         <item>Gato</item>
     </string-array>
