--- a/app/src/main/res/layout/activity_lista_servicos.xml
+++ b/app/src/main/res/layout/activity_lista_servicos.xml
@@ -7,6 +7,8 @@
     </include>
 
     <ListView
+        android:id="@+id/lvEstaServicoBusca"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_below="@+id/tbBuscaServicos" />
 </RelativeLayout>
