Testes de Busca servico funcionais

--- a/app/src/main/res/layout/activity_busca_servicos.xml
+++ b/app/src/main/res/layout/activity_busca_servicos.xml
@@ -23,13 +23,15 @@
                 android:id="@+id/tabItem"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Serviços" />
+                android:text="Serviços"
+                android:visibility="visible" />
 
             <android.support.design.widget.TabItem
                 android:id="@+id/tabItem2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Opções de pets" />
+                android:text="Opções de pets"
+                android:visibility="visible" />
 
 
 
