--- a/app/src/main/res/layout/activity_avalicoes_estabelecimento.xml
+++ b/app/src/main/res/layout/activity_avalicoes_estabelecimento.xml
@@ -12,13 +12,13 @@
     tools:context="projetaobcc20172.com.projetopetemfoco.activity.AvalicoesEstabelecimentoActivity">
 
     <include
-        android:id="@+id/tb_avaliacoes_estabelecimento"
+        android:id="@+id/tb_lista_avaliacoes_estabelecimento"
         layout="@layout/toolbar"></include>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/tb_avaliacoes_estabelecimento"
+        android:layout_below="@+id/tb_lista_avaliacoes_estabelecimento"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
@@ -59,7 +59,7 @@
                 <ListView
                     android:id="@+id/lvListaAvaliacoes"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="match_parent" />
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
