--- a/app/src/main/res/layout/activity_endereco.xml
+++ b/app/src/main/res/layout/activity_endereco.xml
@@ -6,18 +6,11 @@
     android:background="@drawable/fundo_degrade"
     tools:context="projetaobcc20172.com.projetopetemfoco.activity.EnderecoActivity">
 
-    <include
-        android:id="@+id/tb_main"
-        layout="@layout/toolbar">
-
-    </include>
-
     <ListView
         android:id="@+id/lv_enderecos"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:padding="8dp"
-        android:layout_below="@+id/tb_main"
         android:layout_above="@+id/ll_main">
 
     </ListView>
