--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,13 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/fundo_degrade"
-    tools:context="projetaobcc20172.com.projetopetemfoco.activity.LoginActivity">
-
-    <include
-        android:id="@+id/tb_main"
-        layout="@layout/toolbar">
-
-    </include>
+    tools:context="projetaobcc20172.com.projetopetemfoco.activity.MainActivity">
 
     <LinearLayout
         android:orientation="vertical"
@@ -20,12 +14,6 @@
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginTop="40dp"
-            android:layout_marginBottom="2dp"/>
 
         <TextView
             android:layout_width="match_parent"
@@ -50,62 +38,6 @@
             android:layout_margin="6dp"
             android:gravity="center"
             android:textStyle="bold"/>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginTop="2dp"
-            android:layout_marginBottom="2dp"/>
-
-        <Button
-            android:id="@+id/btnMeusPets"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="4dp"
-            android:background="@drawable/shapebutton"
-            android:text="@string/botao_meus_pets" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginTop="2dp"
-            android:layout_marginBottom="2dp" />
-
-        <Button
-            android:id="@+id/btnBuscarServicos"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="4dp"
-            android:background="@drawable/shapebuttonborder"
-            android:text="@string/botao_buscar_servicos" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginTop="2dp"
-            android:layout_marginBottom="2dp" />
-
-        <Button
-            android:id="@+id/btnMeusFavoritos"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="4dp"
-            android:background="@drawable/shapebuttonborder"
-            android:text="@string/botao_meus_favoritos" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginTop="2dp"
-            android:layout_marginBottom="2dp" />
-
-        <Button
-            android:id="@+id/btnSair"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="4dp"
-            android:background="@drawable/shapebuttonborder"
-            android:text="@string/sair" />
 
     </LinearLayout>
 
