--- a/app/src/main/res/layout/activity_pets.xml
+++ b/app/src/main/res/layout/activity_pets.xml
@@ -1,23 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/fundo_degrade"
-    tools:context="projetaobcc20172.com.projetopetemfoco.activity.PetsActivity">
-
-    <include
-        android:id="@+id/tb_main"
-        layout="@layout/toolbar">
-
-    </include>
+    android:background="@drawable/fundo_degrade">
 
     <ListView
         android:id="@+id/lv_pets"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:padding="8dp"
-        android:layout_below="@+id/tb_main"
         android:layout_above="@+id/ll_main">
 
     </ListView>
