Adicionado opção no menu (Meus Favoritos). Removido menu superior direito.

--- a/app/src/main/res/menu/opcoes_menu.xml
+++ b/app/src/main/res/menu/opcoes_menu.xml
@@ -11,7 +11,11 @@
         <item
             android:id="@+id/nav_endereco"
             android:icon="@drawable/ic_action_endereco"
-            android:title="Endereço" />
+            android:title="Meu Endereço" />
+        <item
+            android:id="@+id/nav_favoritos"
+            android:icon="@drawable/ic_action_favoritos"
+            android:title="Meus Favoritos" />
         <item
             android:id="@+id/nav_estabelecimentos"
             android:icon="@drawable/ic_action_estabelecimentos"
