--- a/app/src/main/res/layout/activity_busca.xml
+++ b/app/src/main/res/layout/activity_busca.xml
@@ -20,6 +20,6 @@
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_main"
-        app:menu="@menu/opcoes_busca" />
+        app:menu="@menu/opcoes_menu" />
 
 </android.support.v4.widget.DrawerLayout>
